# PROYECTO-FINAL

./: CMakeLists.txt  cmakelist.txt  main.cpp  main.ui  panel.h  shelf.cpp
DataHub/: DBControl.cpp  DBControl.h
compItem/: CompForm.cpp  CompForm.h  CompForm.ui
forge/: install.cmake
model/: CompList.cpp  CompList.h  FiltProxy.cpp  FiltProxy.h
